package calculatorMVC.db.fetch;

public interface IFetchFromDB {
    String fetchFromDB();
}
