package calculatorMVC.db.save;

public interface ISaveToDB {
    void saveToDB(String info);
}
