package calculatorMVC.model.divideOperation;

public interface IDivide {
    double divide();
}
