package calculatorMVC.model.multiplyOperation;

public interface IMultiply {
    double multiply();
}
