package calculatorMVC.model.substractOperation;

public interface ISubstract {
    double substract();
}
