package calculatorMVC.model.sumOperation;

public interface ISum {
    double sum();
}
