package calculatorMVC.view.input;

public class FileInput implements IInput {

    @Override
    public String getInput() {
        return "get input from file";
    }
}
