package saleTicketOnline.view;

/**
 * интерфейс запуска визуальной оболочки
 */
public interface IView {
    /**
     * метод для запуска визуально оболочки
     */
    void run();
}
